--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -21,14 +21,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project Name goes here</a>
+              <a class="navbar-brand" href="/">Meisuso</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-
+              <ul class = "nav navbar-nav">
+                <li><a href="/account/profile">Profile</a></li>
+                <li><a href="/account/profile/edit">Edit Profile</a></li>
+                <li><a href="/account/change-password">Change Password</a></li>
+              </ul>
 
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="/account/register">Register</a></li>
+                <li><a href="/account/login">Log In</a></li>
+                <li><a href="/account/logout">Log Out</a></li>
+
               </ul>
+
             </div><!--/.nav-collapse -->
           </div><!--/.container-fluid -->
         </nav>
