menu bar updates

--- a/tutorial/accounts/templates/accounts/profile.html
+++ b/tutorial/accounts/templates/accounts/profile.html
@@ -7,5 +7,6 @@
 <p>Email: {{user.email}}</p>
 <p>First name: {{user.first_name}}</p>
 <p>Last name: {{user.last_name}}</p>
+<a href="/account/profile/edit" class="btn btn-default" role="button">Edit Profile</a>
 
 {%endblock%}
