--- a/tutorial/accounts/templates/accounts/home.html
+++ b/tutorial/accounts/templates/accounts/home.html
@@ -2,5 +2,9 @@
 {% block head %}
 {% endblock %}
 {%block body%}
-<h1>Home</h1>
+<div class="jumbotron">
+  <h1>Home</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
 {%endblock%}
