--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -4,6 +4,9 @@
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 {% block head %}
 <title>base</title>
 {% endblock%}
@@ -24,16 +27,33 @@
               <a class="navbar-brand" href="/">Meisuso</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+
+
               <ul class = "nav navbar-nav">
-                <li><a href="/account/profile">Profile</a></li>
-                <li><a href="/account/profile/edit">Edit Profile</a></li>
-                <li><a href="/account/change-password">Change Password</a></li>
+
+              </ul>
+  {% if user.is_authenticated %}
+              <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/account/profile">My Profile</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="account/logout">Log Out</a></li>
+                  </ul>
+                </li>
               </ul>
 
-              <ul class="nav navbar-nav navbar-right">
+                {% else %}
+<ul class="nav navbar-nav navbar-right">
+
                 <li><a href="/account/register">Register</a></li>
                 <li><a href="/account/login">Log In</a></li>
-                <li><a href="/account/logout">Log Out</a></li>
+  </ul>
+
+{% endif %}
 
               </ul>
 
