--- a/tutorial/accounts/templates/accounts/edit_profile.html
+++ b/tutorial/accounts/templates/accounts/edit_profile.html
@@ -5,6 +5,7 @@
 <form method="post">
   {% csrf_token %}
   {{form.as_p}}
+  {{profile_form.as_p}}
   <button class = "btn btn-default" type="submit">Submit</button>
 </form>
 
