--- a/tutorial/accounts/templates/accounts/profile.html
+++ b/tutorial/accounts/templates/accounts/profile.html
@@ -7,6 +7,12 @@
 <p>Email: {{user.email}}</p>
 <p>First name: {{user.first_name}}</p>
 <p>Last name: {{user.last_name}}</p>
+<p>Description: {{user.userprofile.description}}</p>
+<p>City: {{user.userprofile.city}}</p>
+<p>Phone: {{user.userprofile.phone}}</p>
+{% for Product in products %}
+<p>Product: {{ Product.product_name }}</p>
+{%endfor%}
 <a href="/account/profile/edit" class="btn btn-default" role="button">Edit Profile</a>
 
 {%endblock%}
