--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -15,7 +15,7 @@
   <br>
   <div class="container">
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -29,13 +29,13 @@
             <div id="navbar" class="navbar-collapse collapse">
 
 
-              <ul class = "nav navbar-nav">
 
-              </ul>
-  {% if user.is_authenticated %}
+  {% if user.is_authenticated %}<ul class = "nav navbar-nav">
+    <li><a href="{% url 'all-product' %}">All Products</a></li>
+  </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.username}}<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="{% url 'view_profile' %}">My Profile</a></li>
                     <li><a href="#">Another action</a></li>
