add roles and more product dimensions

--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -38,7 +38,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.username}}<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="{% url 'view_profile' %}">My Profile</a></li>
-                    <li><a href="#">Another action</a></li>
+                    <li><a href="{% url 'my-product' %}">My Products</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="{% url 'logout' %}">Log Out</a></li>
