--- a/tutorial/accounts/templates/accounts/reg_form.html
+++ b/tutorial/accounts/templates/accounts/reg_form.html
@@ -9,6 +9,7 @@
   <form method="post">
   {% csrf_token %}
   {{form.as_p}}
+  {{profile_form.as_p}}
   <button type="btn btn-default">Submit</button>
 
 </form>
