--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -28,7 +28,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
+              {% if request.user.is_superuser %}
+              <ul class = "nav navbar-nav">
+<li><a href="{% url 'view_profile' %}">Admin</a></li>
+</ul>
+{%else%}
 
+{%endif%}
 
   {% if user.is_authenticated %}<ul class = "nav navbar-nav">
     <li><a href="{% url 'all-product' %}">All Products</a></li>
@@ -54,6 +60,7 @@
   </ul>
 
 {% endif %}
+
 
               </ul>
 
