add userprofiles to userlist

--- a/tutorial/accounts/templates/accounts/profile.html
+++ b/tutorial/accounts/templates/accounts/profile.html
@@ -11,6 +11,7 @@
 <p>City: {{user.userprofile.city}}</p>
 <p>Phone: {{user.userprofile.phone}}</p>
 <a href="/account/profile/edit" class="btn btn-default" role="button">Edit Profile</a>
+<button onclick="goBack()" class = "btn btn-default">Go Back</button>
 
 
 {%endblock%}
