--- a/tutorial/accounts/templates/accounts/home.html
+++ b/tutorial/accounts/templates/accounts/home.html
@@ -8,4 +8,6 @@
   <p>...</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
+
+<h1>test</h1>
 {%endblock%}
