--- a/tutorial/accounts/templates/accounts/all_product.html
+++ b/tutorial/accounts/templates/accounts/all_product.html
@@ -12,12 +12,11 @@
                 <div class="thumbnail">
                     <div class="caption">
                         <p><a href="/account/product_detail/{{Product.id}}" product.id>Product name: {{ Product.product_name }}</a></p>
-                        <p>Product category: {{ Product.category }}</p>
-                        <p>Product category: {{ Product.category }}</p>
-                        <p>Product category: {{ Product.category }}</p>
-                        <p>Product category: {{ Product.category }}</p>
-                        <p>Product category: {{ Product.category }}</p>
-                        <p>Product category: {{ Product.category }}</p>
+                        <p>Category: {{ Product.category }}</p>
+                        <p>Season: {{ Product.season }}</p>
+                        <p>Price per unit: {{ Product.price }}</p>
+                        <p>Units: {{ Product.unit }}</p>
+                        <p>Description: {{ Product.description }}</p>
                     </div>
                 </div>
             </div>
