--- a/tutorial/accounts/templates/accounts/base.html
+++ b/tutorial/accounts/templates/accounts/base.html
@@ -44,6 +44,8 @@
 
   {% if user.is_authenticated %}<ul class = "nav navbar-nav">
     <li><a href="{% url 'all-product' %}">All Products</a></li>
+    <li><a href="{% url 'all-product' %}">All Products</a></li>
+
   </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
