--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">Meisuso</a>
+              <a class="navbar-brand" href="/">Test</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
@@ -44,6 +44,8 @@
 
   {% if user.is_authenticated %}<ul class = "nav navbar-nav">
     <li><a href="{% url 'all-product' %}">All Products</a></li>
+    <li><a href="{% url 'all-users' %}">All Producers</a></li>
+
   </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -74,7 +76,7 @@
           </div><!--/.container-fluid -->
         </nav>
 
-    <title>Meisuso</title>
+    <title>test</title>
     {% block body %}
     {% endblock%}
     </div>
