--- a/tutorial/accounts/templates/accounts/base.html
+++ b/tutorial/accounts/templates/accounts/base.html
@@ -19,7 +19,6 @@
 
 <body>
   <br>
-  <div class="container">
 
     <nav class="navbar navbar-inverse">
           <div class="container-fluid">
@@ -30,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">Meisuso</a>
+              <a class="navbar-brand" href="/">Meisuso2</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
@@ -79,6 +78,6 @@
     <title>Meisuso</title>
     {% block body %}
     {% endblock%}
-    </div>
+
   </body>
 </html>
