--- a/tutorial/accounts/templates/accounts/edit_profile.html
+++ b/tutorial/accounts/templates/accounts/edit_profile.html
@@ -2,6 +2,8 @@
 {% block head %}
 {% endblock %}
 {%block body%}
+
+<div class="container">
   <form class="form-horizontal" method="post">
   {% csrf_token %}
   {{form.as_p}}
@@ -9,4 +11,6 @@
   <button class = "btn btn-default" type="submit">Submit</button>
   <button class="btn btn-default" onclick="goBack()">Go Back</button>
 </form>
+</div>
+
 {%endblock%}
