--- a/tutorial/accounts/templates/accounts/home.html
+++ b/tutorial/accounts/templates/accounts/home.html
@@ -4,10 +4,33 @@
 
 {%block body%}
 <div class="jumbotron">
-  <h1>Home</h1>
-  <p>...</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  <div class="container">
+    <h1>Home</h1>
+    <p>Klik hier om je in te schrijven voor de nieuwsbrief</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Inschrijven</a></p>
+  </div>
 </div>
 
-<h1>test</h1>
+<main role="main" class="container">
+  <div class="row">
+    <div class="col-md-8 blog-main">
+      <h3 class="pb-3 mb-4 font-italic border-bottom">
+        From the Firehose
+      </h3>
+      <div class="blog-post">
+      {% for BlogItem in blogitems %}
+      <h2 class = "blog-post-title"> {{BlogItem.title}}</h2>
+      <p>{{BlogItem.description}}</p>
+      {% endfor %}
+      </div>
+    </div>
+    <aside class="col-md-4 blog-sidebar">
+      <div class="p-3 mb-3 bg-light rounded">
+        <h4 class="font-italic">About</h4>
+        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+      </div>
+    </aside>
+  </div>
+</main>
+
 {%endblock%}
