--- a/tutorial/accounts/templates/accounts/login.html
+++ b/tutorial/accounts/templates/accounts/login.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %}
-{%block head%}
-{%endblock%}
-{%block body%}
-  <h1>Welcome</h1>
-  <p>You can Login here</p>
-  <h2>Login</h2>
-  <form method="post">
-    {%csrf_token%}
-    {{form.as_p}}
-    <button class="btn btn-default" type="submit" name="button">Login</button>
 
-  </form>
+{%block body%}
+<div class="form-group container">
+
+<body class = "text-center" cz-shortcut-listen="true">
+  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <form role="form" class="form-signin" method="post" action="{% url 'login' %}">
+      {%csrf_token%}
+
+          <label for="id_username" class="sr-only">Username</label>
+          <input id="id_username" name="username" type="text" class="form-control" required autofocus>
+          <label for="id_password">Password</label>
+          <input id="inputPassword" name="password" type="password" class="form-control" required autofocus>
+      {% if form.errors %}
+      <p class=" label label-danger">Your username and password didn't match. Please try again.</p>
+      {% endif %}
+      <input type="submit" value="Login" class="btn btn-primary pull-right"/>
+      <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+</body>
+</div>
+
 
 {%endblock%}
