--- a/tutorial/accounts/templates/accounts/profile.html
+++ b/tutorial/accounts/templates/accounts/profile.html
@@ -2,16 +2,20 @@
 {% block head %}
 {% endblock %}
 {%block body%}
-<h1>Profile</h1>
-<p>Username: {{user}}</p>
-<p>Email: {{user.email}}</p>
-<p>First name: {{user.first_name}}</p>
-<p>Last name: {{user.last_name}}</p>
-<p>Description: {{user.userprofile.description}}</p>
-<p>City: {{user.userprofile.city}}</p>
-<p>Phone: {{user.userprofile.phone}}</p>
-<a href="/account/profile/edit" class="btn btn-default" role="button">Edit Profile</a>
-<button onclick="goBack()" class = "btn btn-default">Go Back</button>
+<div class="container">
+  <h1 class="cover-heading">Profile</h1>
+  <p>Username: {{user}}</p>
+  <p>Email: {{user.email}}</p>
+  <p>First name: {{user.first_name}}</p>
+  <p>Last name: {{user.last_name}}</p>
+  <p>Description: {{user.userprofile.description}}</p>
+  <p>City: {{user.userprofile.city}}</p>
+  <p>Phone: {{user.userprofile.phone}}</p>
+  <a href="/account/profile/edit" class="btn btn-default" role="button">Edit Profile</a>
+  <button onclick="goBack()" class = "btn btn-default">Go Back</button>
+</div>
+
+
 
 
 {%endblock%}
