--- a/tutorial/accounts/templates/accounts/reg_form.html
+++ b/tutorial/accounts/templates/accounts/reg_form.html
@@ -13,7 +13,7 @@
       <p>E-mail</p>{{form.email}}
     </div>
   </div>
-  
+
     <div class="form-row">
       <div class="form-group col-md-6">
         <p>First name</p>{{form.first_name}}
@@ -30,6 +30,7 @@
         <p>Repeat Password</p>{{form.password2}}
       </div>
     </div>
+    <h1>Company Information</h1>
     <div class="form-row">
       <div class="form-group col-md-6">
         <p>Country</p>{{form.country}}
@@ -46,40 +47,42 @@
         <p>Address 2</p>{{form.address2}}
       </div>
     </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <p>Website</p>{{form.website}}
+      </div>
+      <div class="form-group col-md-6">
+        <p>Phone</p>{{form.phone}}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <p>Company name</p>{{form.company}}
+      </div>
+      <div class="form-group col-md-6">
+        <p>Role</p>{{form.role}}
+      </div>
+    </div>
 
-  <button class="btn btn-default" type="btn btn-default">Submit</button>
-  <button class="btn btn-default" onclick="goBack()">Go Back</button>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <p>Postcode</p>{{form.postcode}}
+      </div>
+      <div class="form-group col-md-6">
+        <p>State</p>{{form.state}}
+      </div>
+    </div>
+      <div class="form-row">
+
+
+      <div class="form-group col-md-6">
+        <button class="btn btn-default" type="btn btn-default">Submit</button>
+        <button class="btn btn-default" onclick="goBack()">Go Back</button>
+      </div>
+    </div>
+</div>
 
 
 </form>
 
-<form>
-
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
 {% endblock %}
