--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -18,8 +18,8 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 50%;
-        width: 50%
+        height: 100%;
+        width: 100%
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -37,9 +37,8 @@
 
 <body>
   <br>
-  <div class="container">
 
-    <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -48,13 +47,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">Test</a>
+              <a class="navbar-brand" href="/">Meisuso</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
               {% if request.user.is_superuser %}
               <ul class = "nav navbar-nav">
-<li><a href="{% url 'view_profile' %}">Admin</a></li>
+<li><a href="{% url 'admin:index' %}">Admin</a></li>
 </ul>
 {%else%}
 
@@ -97,6 +96,5 @@
     <title>test</title>
     {% block body %}
     {% endblock%}
-    </div>
   </body>
 </html>
